# Practical-Multi-AI-Agents-crewAI

./: README.md
L1-Automated-Project/: L1-Automated_Project.ipynb
L2-Project_Progress_Report/: L2-Project_Progress_Report.ipynb
L3-Agentic-Sales-Pipeline/: L3-Agentic_Sales_Pipeline.ipynb  crewai_flow.html  crewai_flow_complex.html  crewai_flow_graph.html
L4-Support-Data-Analysis/: L4-Support_Data_Analysis.ipynb  training.pkl  training_data.pkl
L5-Content-Creation/: L5-Content_Creation.ipynb
L6-Blogger/blogger/: README.md  pyproject.toml
L6-Blogger/blogger/src/blogger/: crew.py  main.py
