[project]
name = "blogger"
version = "0.1.0"
description = "blogger using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
blogger = "blogger.main:run"
run_crew = "blogger.main:run"
train = "blogger.main:train"
replay = "blogger.main:replay"
test = "blogger.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
